Added Deck Selection

--- a/package.json
+++ b/package.json
@@ -191,15 +191,18 @@
     "flexbox-react": "^4.4.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "3.0.0-beta.6",
+    "material-ui": "^0.19.4",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "react-hot-loader": "3.1.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.76.0",
     "source-map-support": "^0.5.0"
   },
   "devEngines": {
